Added intro course to TOC

--- a/_data/docs_sidebar.yml
+++ b/_data/docs_sidebar.yml
@@ -36,6 +36,10 @@
 
 - title: "Tutorials"
   href: "/tutorials/"
+  sub:
+
+    - title: "Marathon"
+      href: "/intro-course/"
 
 - title: "Frameworks"
   href: "/frameworks/"
