--- a/_data/docs_sidebar.yml
+++ b/_data/docs_sidebar.yml
@@ -38,7 +38,7 @@
   href: "/tutorials/"
   sub:
 
-    - title: "Marathon"
+    - title: "Advanced Mesos Course"
       href: "/intro-course/"
 
 - title: "Frameworks"
