--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -4,7 +4,7 @@ advanced:
     This course teaches all of the open source components used in the Mesosphere DCOS. 
   icon: mesos
   tutorials:
-    index:
+    intro-course:
       title: Advanced Mesos Course
       blurb: >
         This course is designed to take you from having no knowledge of systems management by using Apache Mesos, to automatically building and deploying a complete cluster running Apache Mesos, Marathon, Mesos DNS, Chronos, Docker and Ansible.
