--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -1,11 +1,11 @@
 advanced: 
-  name: Intro to Mesos Course
+  name: Introduction to Mesos
   blurb: >
     This course teaches all of the open source components used in the Mesosphere DCOS. 
   icon: mesos
   tutorials:
     intro-course:
-      title: Intro to Mesos Course
+      title: Introduction to Mesos
       blurb: >
         This course is designed to take you from having no knowledge of systems management by using Apache Mesos, to automatically building and deploying a complete cluster running Apache Mesos, Marathon, Mesos DNS, Chronos, Docker and Ansible.
       date: 2015-06-15
