--- a/_data/docs_sidebar.yml
+++ b/_data/docs_sidebar.yml
@@ -33,10 +33,13 @@
   sub:
 
     - title: "Introduction to Mesos"
-      href: "/intro-course/"
-      
+      external: "https://open.mesosphere.com/intro-course"
+
     - title: "Building a Web App with Analytics Using Docker and Marathon"
-      href: "/tutorials/docker-marathon-analytics/"
+      external: "https://mesosphere.com/blog/2015/06/21/web-application-analytics-using-docker-and-marathon/"
+
+    - title: "Getting started with Kubernetes on Mesos"
+      external: "https://github.com/GoogleCloudPlatform/kubernetes/blob/master/docs/getting-started-guides/mesos.md"
 
 - title: "Frameworks"
   href: "/frameworks/"
