Add support and feedback link to sidebar

--- a/_data/docs_sidebar.yml
+++ b/_data/docs_sidebar.yml
@@ -63,3 +63,6 @@
 
 - title: "Downloads"
   href: "/downloads/mesos/"
+
+- title: "Support and Feedback"
+  external: "https://docs.mesosphere.com/support/"
