--- a/_data/tutorials.yml
+++ b/_data/tutorials.yml
@@ -5,12 +5,12 @@ advanced:
   icon: mesos
   tutorials:
     intro-course:
-      title: <a href="https://open.mesosphere.com/intro-course/" target="_blank">Advanced Mesos Course</a>
+      title: <a href="https://open.mesosphere.com/advanced-course/" target="_blank">Advanced Mesos Course</a>
       blurb: >
         This course is designed to take you from having no knowledge of systems management by using Apache Mesos, to automatically building and deploying a complete cluster running Apache Mesos, Marathon, Mesos DNS, Chronos, Docker and Ansible.
       date: 2015-06-15
       duration: 1 day
-      path: https://open.mesosphere.com/intro-course/
+      path: https://open.mesosphere.com/advanced-course/
 
 
 docker:
