--- a/_data/docs_sidebar.yml
+++ b/_data/docs_sidebar.yml
@@ -1,4 +1,118 @@
-- title: ""
+- title: "Overview"
   href: "/"
 
+- title: "Getting Started"
+  href: "/getting-started/"
+  sub:
 
+    - title: "Setting up a Cluster"
+      href: "/getting-started/install/"
+
+    - title: "Provisioning Tools"
+      href: "/getting-started/tools/"
+
+    - title: "Developer Resources"
+      href: "/getting-started/resources/"
+
+- title: "Tutorials"
+  href: "/tutorials/"
+  sub:
+
+    - title: "Building a Web App with Analytics Using Docker and Marathon"
+      external: "https://mesosphere.com/blog/2015/06/21/web-application-analytics-using-docker-and-marathon/"
+
+    - title: "Getting started with Kubernetes on Mesos"
+      external: "https://docs.mesosphere.com/services/kubernetes/"
+
+    - title: "Creating a Mesos Framework with Go"
+      href: "/tutorials/go-mesos-framework/"
+
+    - title: "Service Discovery using HAProxy"
+      href: "/tutorials/service-discovery/"
+
+- title: "Advanced Mesos Course"
+  href: "/advanced-course/"
+  sub:
+
+    - title: "Introduction"
+      href: "/advanced-course/introduction/"
+
+    - title: "1: Installing Software"
+      href: "/advanced-course/installing-software/"
+
+    - title: "2: Installing ZooKeeper"
+      href: "/advanced-course/installing-zookeeper/"
+
+    - title: "3: Using Apache Mesos"
+      href: "/advanced-course/using-apache-mesos/"
+
+    - title: "4: Starting Marathon"
+      href: "/advanced-course/starting-marathon/"
+
+    - title: "5: Using the Marathon GUI"
+      href: "/advanced-course/using-the-marathon-gui/"
+
+    - title: "6: Marathon REST API"
+      href: "/advanced-course/marathon-rest-api/"
+
+    - title: "7: Building and Running Mesos DNS"
+      href: "/advanced-course/building-and-running-mesos-dns/"
+
+    - title: "8: Installing Chronos"
+      href: "/advanced-course/installing-chronos/"
+
+    - title: "9: Creating A Slave Node"
+      href: "/advanced-course/creating-a-slave-node/"
+
+    - title: "10: Installing Mesos"
+      href: "/advanced-course/installing-mesos/"
+
+    - title: "11: Scaling To Two Nodes"
+      href: "/advanced-course/scaling-to-two-nodes/"
+
+    - title: "12: Deploying A Web App Using Docker"
+      href: "/advanced-course/deploying-a-web-app-using-docker/"
+
+    - title: "13: Distributing Docker To Multiple Nodes"
+      href: "/advanced-course/distributing-docker-to-multiple-nodes/"
+
+    - title: "14: Installing and Using DCOS CLI"
+      href: "/advanced-course/installing-and-using-dcos-cli/"
+
+    - title: "15: Starting Four Nodes"
+      href: "/advanced-course/starting-four-nodes/"
+
+    - title: "16: Recreating the Cluster Using Ansible"
+      href: "/advanced-course/recreating-the-cluster-using-ansible/"
+
+    - title: "17: Advanced Usage of Marathon"
+      href: "/advanced-course/advanced-usage-of-marathon/"
+
+    - title: "18: Advanced Usage of Chronos"
+      href: "/advanced-course/advanced-usage-of-chronos/"
+
+    - title: "19: Troubleshooting"
+      href: "/advanced-course/troubleshooting/"
+
+    - title: "20: Advanced Cluster Building"
+      href: "/advanced-course/advanced-cluster-building/"
+
+- title: "Frameworks"
+  href: "/frameworks/"
+  sub:
+
+    - title: "Marathon"
+      href: "/frameworks/marathon.html"
+
+    - title: "Chronos"
+      href: "/frameworks/chronos.html"
+
+- title: "Reference"
+  href: "/reference/"
+  sub:
+
+    - title: "Glossary"
+      href: "/reference/glossary/"
+
+- title: "Downloads"
+  href: "/downloads/mesos/"
