--- a/_data/download_rc_versions.yml
+++ b/_data/download_rc_versions.yml
@@ -3,7 +3,7 @@
 
     - name: 1.5.0-rc2
       announcement: https://github.com/apache/mesos/blob/1.5.0-rc2/CHANGELOG
-      timestamp: tag 1.5.0-rc2
+      timestamp: 2018-02-01 17:11:21 -0800
       packages:
       - name: Ubuntu 17.04 (AMD 64)
         path: ubuntu/pool/main/m/mesos/mesos_1.5.0-1.0.1.rc2.ubuntu1704_amd64.deb
@@ -29,7 +29,7 @@
 
     - name: 1.5.0-rc1
       announcement: https://github.com/apache/mesos/blob/1.5.0-rc1/CHANGELOG
-      timestamp: tag 1.5.0-rc1
+      timestamp: 2018-01-22 16:42:44 -0800
       packages:
       - name: Ubuntu 17.04 (AMD 64)
         path: ubuntu/pool/main/m/mesos/mesos_1.5.0-1.0.1.rc1.ubuntu1704_amd64.deb
